--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,12 @@
   color: #61dafb;
 }
 
+.App-link:hover {
+  font-size: 40px;
+  font-weight: bold;
+  transition-duration: 0.3s;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
