--- a/src/Footer.css
+++ b/src/Footer.css
@@ -7,7 +7,7 @@ footer {
     font-size: 30px;
 }
 
-a {
+.Author {
     /* OTHER */
     color: inherit;
     font-size: inherit;
@@ -15,6 +15,6 @@ a {
     text-decoration: none;
 }
 
-a:hover {
+.Author:hover {
     color: tomato;
 }
