--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,6 +1,6 @@
 .Author {
     /* BOX MODEL */
-    margin-top: auto;
+    margin-top: 10%;
     border-top: 2px solid white;
     /* OTHER */
     color: white;
