Add css .avatar-container {padding-block: 1em} to add space between img and border

--- a/src/WhoPage.css
+++ b/src/WhoPage.css
@@ -19,7 +19,7 @@
 
     /* Box Model */
     margin-inline: auto;
-    padding-top: 1em;
+    padding-block: 1em;
     border-bottom: 2px dotted #E7EBEC;
 
     /* other */
