--- a/src/WhoPage.css
+++ b/src/WhoPage.css
@@ -4,10 +4,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1em;
+    gap: 1rem;
     
     /* Box Model */
-    padding-block: 3em;
+    padding-block: 2rem;
     height: inherit;
 }
 
@@ -19,7 +19,7 @@
 
     /* Box Model */
     margin-inline: auto;
-    padding-block: 1em;
+    padding-block: 1rem;
     border-bottom: 2px dotted #E7EBEC;
 
     /* other */
@@ -32,16 +32,16 @@
     flex-direction: column;
     justify-content: center;
     /* other */
-    line-height: 3em;
-    font-size: inherit;
+    line-height: 3rem;
+    font-size: 1.2rem;
 }
 
 author {
-    font-size: inherit;
+    font-size: 1.2rem;
     font-weight: bold;
 }
 
 .intro-summary {
-    line-height: 1.4em;
-    font-size: inherit;
+    line-height: 1.8rem;
+    font-size: 1.2rem;
 }
