--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -59,13 +59,13 @@ a {
 }
 
 @media (max-width: 360px) {
-    .navigation-item {
+    .navigation-item span {
         font-size: 2rem;
     }
 }
 
 @media (min-width: 976px) {
-    .navigation-item {
+    .navigation-item span {
         font-size: 2rem;
     }
 }
