--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,10 @@
 .App {
-  text-align: center;
-  height: 100vh;
-}
-
-
-
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* display */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* other */
+  text-align: center;
+  height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-.App-link:hover {
-  font-size: 40px;
-  font-weight: bold;
-  transition-duration: 0.3s;
-} */
