--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -9,11 +9,11 @@
 }
 
 .landing-title {
-    font-size: 72px;
+    font-size: 6rem;
 }
 
 .landing-body {
-    font-size: 24px;
+    font-size: 2rem;
 }
 
 .swipe-down-icon {
