--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,17 @@
 .container {
+  max-width: 950px;
+  margin-inline: auto;
+  padding: 0 2rem;
+}
+
+.main {
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+/* .container {
   padding: 0 2rem;
 }
 
@@ -113,4 +126,9 @@
     width: 100%;
     flex-direction: column;
   }
-}
+} */
+
+/* html,
+body {
+  background: #e6e6e6;
+} */
