fix: remove unused css and fix fontawesome origin

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -18,8 +18,6 @@
   border-bottom: 2px dotted #E7EBEC;
 }
 
-
-
 .social-media-links {
   /* Layout */
   display: flex;
@@ -58,7 +56,7 @@
   font-size: 1.2rem;
 }
 
-@media (max-width: 800px) {
+/* @media (max-width: 800px) {
   .avartar-img {
     max-width: 210px;
     height: auto;
@@ -70,4 +68,4 @@
     max-width: 100%;
     height: 180px;
   }
-}
+} */
