--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -56,7 +56,7 @@
   font-size: 1.2rem;
 }
 
-/* @media (max-width: 800px) {
+@media (max-width: 800px) {
   .avartar-img {
     max-width: 210px;
     height: auto;
@@ -68,4 +68,4 @@
     max-width: 100%;
     height: 180px;
   }
-} */
+}
