--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,6 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  /* background: #e6e6e6; */
   overflow-x: hidden;
 }
 
@@ -21,6 +20,7 @@ a {
 * {
   box-sizing: border-box;
   padding: 0;
+  margin: 0;
   max-width: 100vw;
   line-height: 1.6;
 }
