--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Calibri, Roboto, Oxygen;
+  font-family: Roboto, Calibri, Oxygen;
   min-height: 100vh;
 
   display: flex;
